[package]
name = "server"
version = "0.1.0"
authors = ["Donal Byrne <byrnedo@tcd.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
strum = "0.20"
strum_macros = "0.20.1"
nom = "3.2"
bytes = "1.0.1"
unicode-segmentation = "1.7.1"
futures = "0.1.31"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

#[[bin]]
#name = "server"
#path = "src/bin/server.rs"
